@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2010 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -100,9 +103,9 @@ public class UpdateTestSuite implements IObjectActionDelegate {
 
 			String message;
 			if (count == 1) {
-				message= Messages.format(WizardMessages.UpdateAllTests_selected_methods_label_one, new Integer(count));
+				message= Messages.format(WizardMessages.UpdateAllTests_selected_methods_label_one, Integer.valueOf(count));
 			} else {
-				message= Messages.format(WizardMessages.UpdateAllTests_selected_methods_label_many, new Integer(count));
+				message= Messages.format(WizardMessages.UpdateAllTests_selected_methods_label_many, Integer.valueOf(count));
 			}
 			return new JUnitStatus(IStatus.INFO, message);
 		}
