@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2008 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -36,10 +39,10 @@ public class InvocationCountExampleTest extends TestCase {
 		try {
 			Set<Double> set= new HashSet<>();
 			performanceMeter.start();
-			set.add(new Double(10));
-			set.add(new Double(9));
-			set.add(new Double(11));
-			set.add(new Double(10));
+			set.add(Double.valueOf(10));
+			set.add(Double.valueOf(9));
+			set.add(Double.valueOf(11));
+			set.add(Double.valueOf(10));
 			performanceMeter.stop();
 			performanceMeter.commit();
 		} finally {
