@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2015 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -74,12 +77,12 @@ public class RefactoringScannerTests extends RefactoringTest{
 
 		ArrayList<Integer> expectedMatchesList= new ArrayList<>(expectedMatches.length);
 		for (int i= 0; i < expectedMatches.length; i++)
-			expectedMatchesList.add(new Integer(TextRangeUtil.getOffset(text, expectedMatches[i].fLine, expectedMatches[i].fColumn)));
+			expectedMatchesList.add(Integer.valueOf(TextRangeUtil.getOffset(text, expectedMatches[i].fLine, expectedMatches[i].fColumn)));
 		ArrayList<Integer> matchesList= new ArrayList<>();
 		Set<TextMatch> matches= fScanner.getMatches();
 		for (Iterator<TextMatch> iter= matches.iterator(); iter.hasNext();) {
 			TextMatch element= iter.next();
-			matchesList.add(new Integer(element.getStartPosition()));
+			matchesList.add(Integer.valueOf(element.getStartPosition()));
 		}
 		Collections.sort(matchesList);
 		assertEquals("results", expectedMatchesList.toString(), matchesList.toString());
