@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2008 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -28,7 +31,7 @@ public class TwoPaneElementSelectorExample {
 		java.util.Random random= new java.util.Random();
 		Object[] elements= new Object[8000];
 		for (int i= 0; i < elements.length; i++)
-			elements[i]= new Integer(random.nextInt()).toString();
+			elements[i]= Integer.valueOf(random.nextInt()).toString();
 		ILabelProvider elementRenderer= new org.eclipse.jface.viewers.LabelProvider() {
 			@Override
 			public String getText(Object element) {
