@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2008 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -46,7 +49,7 @@ public class TestParticipant implements IQueryParticipant {
 	@Override
 	public void search(ISearchRequestor requestor, QuerySpecification data, IProgressMonitor monitor) throws CoreException {
 		for (int i= 0; i < 20; i++) {
-			requestor.reportMatch(new Match(new Integer(fgRandom.nextInt()), -1, -1));
+			requestor.reportMatch(new Match(Integer.valueOf(fgRandom.nextInt()), -1, -1));
 		}
 	}
 
