@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2015 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -249,7 +252,7 @@ public class OpenTypeHistory extends History<TypeNameMatch, TypeNameMatch> {
 		// Fetching the timestamp might not be cheap (remote file system
 		// external Jars. So check if we alreay have one.
 		if (!fTimestampMapping.containsKey(info)) {
-			fTimestampMapping.put(info, new Long(getContainerTimestamp(info)));
+			fTimestampMapping.put(info, Long.valueOf(getContainerTimestamp(info)));
 		}
 		super.accessed(info);
 	}
@@ -262,7 +265,7 @@ public class OpenTypeHistory extends History<TypeNameMatch, TypeNameMatch> {
 
 	public synchronized void replace(TypeNameMatch old, TypeNameMatch newMatch) {
 		fTimestampMapping.remove(old);
-		fTimestampMapping.put(newMatch, new Long(getContainerTimestamp(newMatch)));
+		fTimestampMapping.put(newMatch, Long.valueOf(getContainerTimestamp(newMatch)));
 		super.remove(old);
 		super.accessed(newMatch);
 	}
@@ -320,7 +323,7 @@ public class OpenTypeHistory extends History<TypeNameMatch, TypeNameMatch> {
 					if (modifiers != type.getModifiers()) {
 						replace(type, SearchEngine.createTypeNameMatch(jType, modifiers));
 					} else {
-						fTimestampMapping.put(type, new Long(currentTimestamp));
+						fTimestampMapping.put(type, Long.valueOf(currentTimestamp));
 					}
 				}
 			} catch (JavaModelException e) {
@@ -413,7 +416,7 @@ public class OpenTypeHistory extends History<TypeNameMatch, TypeNameMatch> {
 			}
 		}
 		if (timestamp != IResource.NULL_STAMP) {
-			fTimestampMapping.put(info, new Long(timestamp));
+			fTimestampMapping.put(info, Long.valueOf(timestamp));
 		}
 		return info;
 	}
