@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2013 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -65,9 +68,9 @@ public class PromoteTempWizard extends RefactoringWizard {
 							RefactoringMessages.PromoteTempInputPage_Current_method,
 							RefactoringMessages.PromoteTempInputPage_constructors};
 		private static final Integer[] RADIO_BUTTON_DATA= {
-							new Integer(PromoteTempToFieldRefactoring.INITIALIZE_IN_FIELD),
-							new Integer(PromoteTempToFieldRefactoring.INITIALIZE_IN_METHOD),
-							new Integer(PromoteTempToFieldRefactoring.INITIALIZE_IN_CONSTRUCTOR)};
+							Integer.valueOf(PromoteTempToFieldRefactoring.INITIALIZE_IN_FIELD),
+							Integer.valueOf(PromoteTempToFieldRefactoring.INITIALIZE_IN_METHOD),
+							Integer.valueOf(PromoteTempToFieldRefactoring.INITIALIZE_IN_CONSTRUCTOR)};
 		private Button fDeclareStaticCheckbox;
 		private Button fDeclareFinalCheckbox;
 		private Button[] fInitializeInRadioButtons;
