@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2011 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -144,7 +147,7 @@ public class GoToNextPreviousMemberAction extends Action implements IUpdate {
 			if (offsetArray.length == 0)
 				return oldSourceRange;
 			Arrays.sort(offsetArray);
-			Integer oldOffset= new Integer(oldSourceRange.getOffset());
+			Integer oldOffset= Integer.valueOf(oldSourceRange.getOffset());
 			int index= Arrays.binarySearch(offsetArray, oldOffset);
 
 			if (fIsGotoNext)
@@ -249,6 +252,6 @@ public class GoToNextPreviousMemberAction extends Action implements IUpdate {
 
 	private static void addOffset(List<Integer> result, int offset) {
 		if (offset >= 0)
-			result.add(new Integer(offset));
+			result.add(Integer.valueOf(offset));
 	}
 }
