@@ -1,9 +1,12 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ * Copyright (c) 2000, 2018 IBM Corporation and others.
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -24,6 +27,8 @@ import org.eclipse.core.runtime.preferences.IScopeContext;
 
 import org.eclipse.core.resources.IProject;
 
+import org.eclipse.jdt.core.formatter.CodeFormatter;
+
 import org.eclipse.jdt.ui.JavaUI;
 
 import org.eclipse.jdt.internal.ui.preferences.PreferencesAccess;
@@ -37,8 +42,6 @@ import org.eclipse.jdt.internal.ui.preferences.formatter.ProfileManager.Profile;
 
 public class CodeFormatterConfigurationBlock extends ProfileConfigurationBlock {
 
-    private static final String FORMATTER_DIALOG_PREFERENCE_KEY= "formatter_page"; //$NON-NLS-1$
-
 	private static final String DIALOGSTORE_LASTSAVELOADPATH= JavaUI.ID_PLUGIN + ".codeformatter"; //$NON-NLS-1$
 
 	/**
@@ -51,7 +54,7 @@ public class CodeFormatterConfigurationBlock extends ProfileConfigurationBlock {
     		"private final LinkedList fStack;" + //$NON-NLS-1$
     		"public MyIntStack(){fStack= new LinkedList();}" + //$NON-NLS-1$
     		"public int pop(){return ((Integer)fStack.removeFirst()).intValue();}" + //$NON-NLS-1$
-    		"public void push(int elem){fStack.addFirst(new Integer(elem));}" + //$NON-NLS-1$
+    		"public void push(int elem){fStack.addFirst(Integer.valueOf(elem));}" + //$NON-NLS-1$
     		"public boolean isEmpty() {return fStack.isEmpty();}" + //$NON-NLS-1$
     		"}"; //$NON-NLS-1$
 
@@ -88,7 +91,7 @@ public class CodeFormatterConfigurationBlock extends ProfileConfigurationBlock {
     /**
 	 * The JavaPreview.
 	 */
-	private CompilationUnitPreview fJavaPreview;
+	private JavaPreview fJavaPreview;
 
 	protected CustomCodeFormatterBlock fCustomCodeFormatterBlock;
 
@@ -117,9 +120,9 @@ public class CodeFormatterConfigurationBlock extends ProfileConfigurationBlock {
 		fCustomCodeFormatterBlock.createContents(composite, numColumns);
 
 		createLabel(composite, FormatterMessages.CodingStyleConfigurationBlock_preview_label_text, numColumns);
-		CompilationUnitPreview result= new CompilationUnitPreview(profileManager.getSelected().getSettings(), composite);
+		JavaPreview result= new JavaPreview(profileManager.getSelected().getSettings(), composite);
 		result.setFormatterId(fCustomCodeFormatterBlock.getFormatterId());
-        result.setPreviewText(PREVIEW);
+		result.setPreviewText(PREVIEW, CodeFormatter.K_COMPILATION_UNIT);
 		fJavaPreview= result;
 
 		final GridData gd = new GridData(GridData.FILL_VERTICAL | GridData.HORIZONTAL_ALIGN_FILL);
@@ -136,7 +139,8 @@ public class CodeFormatterConfigurationBlock extends ProfileConfigurationBlock {
 
     @Override
 	protected ModifyDialog createModifyDialog(Shell shell, Profile profile, ProfileManager profileManager, ProfileStore profileStore, boolean newProfile) {
-        return new FormatterModifyDialog(shell, profile, profileManager, profileStore, newProfile, FORMATTER_DIALOG_PREFERENCE_KEY, DIALOGSTORE_LASTSAVELOADPATH);
+		// TODO pass custom formatter id for preview?
+        return new FormatterModifyDialog(shell, profile, profileManager, profileStore, newProfile, DIALOGSTORE_LASTSAVELOADPATH);
     }
 
 	@Override
