@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2017 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -824,7 +827,7 @@ public class JavaSearchPage extends DialogPage implements ISearchPage {
 			int totNum= MatchLocations.getTotalNumberOfSettings(searchFor);
 			int currNum= MatchLocations.getNumberOfSelectedSettings(fMatchLocations, searchFor);
 
-			fMatchLocationsLink.setText(Messages.format(SearchMessages.JavaSearchPage_match_location_link_label, new Object[] { new Integer(currNum), new Integer(totNum) }));
+			fMatchLocationsLink.setText(Messages.format(SearchMessages.JavaSearchPage_match_location_link_label, new Object[] { Integer.valueOf(currNum), Integer.valueOf(totNum) }));
 			fMatchLocationsLink.setToolTipText(SearchMessages.JavaSearchPage_match_location_link_label_tooltip);
 		}
 	}
@@ -883,7 +886,7 @@ public class JavaSearchPage extends DialogPage implements ISearchPage {
 	private Button createButton(Composite parent, int style, String text, int data, boolean isSelected) {
 		Button button= new Button(parent, style);
 		button.setText(text);
-		button.setData(new Integer(data));
+		button.setData(Integer.valueOf(data));
 		button.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false));
 		button.setSelection(isSelected);
 		return button;
