@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2016 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -248,7 +251,7 @@ public class JavaSearchQuery implements ISearchQuery {
 					return Messages.format(SearchMessages.JavaSearchQuery_singularReferencesWithMatchLocations, new Object[] { args[0], args[1], matchLocations });
 			}
 		} else {
-			Object[] args= { getSearchPatternDescription(), new Integer(nMatches), getFirstSpecification().getScopeDescription() };
+			Object[] args= { getSearchPatternDescription(), Integer.valueOf(nMatches), getFirstSpecification().getScopeDescription() };
 			switch (limitTo) {
 				case IJavaSearchConstants.IMPLEMENTORS:
 					return Messages.format(SearchMessages.JavaSearchOperation_pluralImplementorsPostfix, args);
@@ -278,7 +281,7 @@ public class JavaSearchQuery implements ISearchQuery {
 		} else if (firstSpecification instanceof PatternQuerySpecification) {
 			return BasicElementLabels.getFilePattern(((PatternQuerySpecification) firstSpecification).getPattern());
 		} else {
-			return new String(""); //$NON-NLS-1$
+			return ""; //$NON-NLS-1$
 		}
 	}
 
