@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2016 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -39,7 +42,7 @@ class OccurrencesSearchLabelProvider extends TextSearchLabelProvider implements 
 	}
 
 	private String getLineNumberLabel(JavaElementLine element) {
-		return Messages.format(SearchMessages.OccurrencesSearchLabelProvider_line_number, new Integer(element.getLineNumber() + 1));
+		return Messages.format(SearchMessages.OccurrencesSearchLabelProvider_line_number, Integer.valueOf(element.getLineNumber() + 1));
 	}
 
 	private String internalGetText(Object element) {
