@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2011 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -186,12 +189,12 @@ public class SmartBackspaceManager {
 	}
 
 	private void addEdit(UndoSpec spec) {
-		Integer i= new Integer(spec.triggerOffset);
+		Integer i= Integer.valueOf(spec.triggerOffset);
 		fSpecs.put(i, spec);
 	}
 
 	private UndoSpec removeEdit(int offset) {
-		Integer i= new Integer(offset);
+		Integer i= Integer.valueOf(offset);
 		UndoSpec spec= fSpecs.remove(i);
 		return spec;
 	}
