@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2000, 2016 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -188,7 +191,7 @@ public abstract class AbstractSpellDictionary implements ISpellDictionary {
 		int distance= 0;
 		String hash= null;
 
-		final StringBuffer buffer= new StringBuffer(BUFFER_CAPACITY);
+		final StringBuilder buffer= new StringBuilder(BUFFER_CAPACITY);
 		final HashSet<RankedWordProposal> result= new HashSet<>(BUCKET_CAPACITY * hashs.size());
 
 		for (int index= 0; index < hashs.size(); index++) {
@@ -264,7 +267,7 @@ public abstract class AbstractSpellDictionary implements ISpellDictionary {
 		int distance= 0;
 		int minimum= Integer.MAX_VALUE;
 
-		StringBuffer buffer= new StringBuffer(BUFFER_CAPACITY);
+		StringBuilder buffer= new StringBuilder(BUFFER_CAPACITY);
 
 		final Object candidates= getCandidates(fHashProvider.getHash(word));
 		if (candidates == null)
@@ -653,7 +656,7 @@ public abstract class AbstractSpellDictionary implements ISpellDictionary {
 					}
 			} catch (IOException exception) {
 				if (line > 0) {
-					String message= Messages.format(JavaUIMessages.AbstractSpellingDictionary_encodingError, new Object[] { new Integer(line), BasicElementLabels.getURLPart(url.toString()) });
+					String message= Messages.format(JavaUIMessages.AbstractSpellingDictionary_encodingError, new Object[] { Integer.valueOf(line), BasicElementLabels.getURLPart(url.toString()) });
 					IStatus status= new Status(IStatus.ERROR, JavaUI.ID_PLUGIN, IStatus.OK, message, exception);
 					JavaPlugin.log(status);
 				} else
