@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2005, 2009 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
@@ -86,7 +89,7 @@ public final class RefactoringDescriptorDeleteQuery implements IRefactoringDescr
 					@Override
 					public final void run() {
 						if (!fShell.isDisposed()) {
-							final String count= new Integer(fCount).toString();
+							final String count= Integer.valueOf(fCount).toString();
 							String message= null;
 							if (fProject != null) {
 								if (fCount == 1) {
